<resources>
    <string name="app_name">AppMVPExample</string>
    <string name="etInput">Ingrese texto</string>
    <string name="btnValidate">Validar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Cerrar</string>
    <string name="title">Titulo</string>
    <string name="description">Descripción</string>
    <string name="date">Fecha</string>
    <string name="hour">Hora</string>
    <string name="typeTask">Tipo Tarea</string>
</resources>
