<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:weakReference="com.example.adiosesr.appmvpexample.addTask.AddTaskActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilTitle"
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twetyEightdp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_title_black_24dp"
                android:hint="@string/title"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textSize="@dimen/fifteensp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:visibility="gone"
            android:id="@+id/fabEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_edit_black_24dp"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:visibility="gone"
            android:id="@+id/fabDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_delete_black_24dp"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fabEdit" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twetyEightdp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tilTitle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_description_black_24dp"
                android:hint="@string/description"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textSize="@dimen/fifteensp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDateEnd"
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twetyEightdp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tilDescription">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietDateEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:hint="@string/date"
                android:singleLine="true"
                android:textSize="@dimen/fifteensp"
                tools:ignore="Deprecated" />

            <!--android:focusableInTouchMode="false"-->
            <!--android:focusable="true"-->
            <!--android:clickable="true"-->
            <!--android:editable="false"-->

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilTimeEnd"
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twetyEightdp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tilDateEnd">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietTimeEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawableStart="@drawable/ic_access_time_black_24dp"

                android:hint="@string/hour"
                android:singleLine="true"
                android:textSize="@dimen/fifteensp"
                tools:ignore="Deprecated" />
            <!--android:focusableInTouchMode="false"-->
            <!--android:focusable="true"-->
            <!--android:clickable="true"-->
            <!--android:editable="false"-->
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilTypeTask"
            android:inputType="textCapSentences"
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twetyEightdp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tilTimeEnd">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietTypeTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/typeTask"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Prioridad :"
            android:textSize="@dimen/twentysp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tilTypeTask" />

        <ImageView
            android:id="@+id/ivLow"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baja_gray"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/ivNormal" />

        <TextView
            android:id="@+id/tvLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Baja"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ivLow"
            app:layout_constraintStart_toStartOf="@+id/ivLow"
            app:layout_constraintTop_toBottomOf="@+id/ivLow" />

        <ImageView
            android:id="@+id/ivNormal"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_normal_gray"
            app:layout_constraintEnd_toStartOf="@+id/ivHigh"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivLow"
            app:layout_constraintTop_toBottomOf="@+id/tvPriority" />

        <TextView
            android:id="@+id/tvNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Normal"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ivNormal"
            app:layout_constraintStart_toStartOf="@+id/ivNormal"
            app:layout_constraintTop_toBottomOf="@+id/ivNormal" />

        <ImageView
            android:id="@+id/ivHigh"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="41dp"
            android:src="@drawable/ic_alta_gray"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/ivNormal"
            app:layout_constraintTop_toTopOf="@+id/ivNormal" />

        <TextView
            android:id="@+id/tvHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alta"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ivHigh"
            app:layout_constraintStart_toStartOf="@+id/ivHigh"
            app:layout_constraintTop_toBottomOf="@+id/ivHigh" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_corner"
            android:text="Guardar"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/ivNormal" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>